--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 		<profile>
 			<id>release</id>
 			<build>
+				<pluginManagement>
 				<plugins>
 					<!-- Source -->
 					<plugin>
@@ -127,6 +128,7 @@
                         </executions>
                     </plugin>
 				</plugins>
+				</pluginManagement>
 			</build>
 			<distributionManagement>
 				<snapshotRepository>
