--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### web
-server.port=8080
+server.port=9088
 server.servlet.context-path=/xxl-job-admin
 
 ### actuator
@@ -23,9 +23,9 @@ mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.xxl.job.admin.core.model
 
 ### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://rm-7xv7ghtp4y0ua1t3kho.mysql.rds.aliyuncs.com:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=root_pwd
+spring.datasource.password=Wei185399!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ### datasource-pool
@@ -41,18 +41,18 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.validation-timeout=1000
 
 ### xxl-job, email
-spring.mail.host=smtp.qq.com
-spring.mail.port=25
-spring.mail.username=xxx@qq.com
-spring.mail.from=xxx@qq.com
-spring.mail.password=xxx
+spring.mail.host=smtp.163.com
+#spring.mail.port=25
+spring.mail.username=wkm1004711425@163.com
+spring.mail.from=wkm1004711425@163.com
+spring.mail.password=NWEMAQVKVIIGIQPF
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 
 ### xxl-job, access token
-xxl.job.accessToken=default_token
+xxl.job.accessToken=Wei185399.
 
 ### xxl-job, i18n (default is zh_CN, and you can choose "zh_CN", "zh_TC" and "en")
 xxl.job.i18n=zh_CN
@@ -62,4 +62,4 @@ xxl.job.triggerpool.fast.max=200
 xxl.job.triggerpool.slow.max=100
 
 ### xxl-job, log retention days
-xxl.job.logretentiondays=30
+xxl.job.logretentiondays=7
