修改生产邮箱配置

--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -41,11 +41,11 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.validation-timeout=1000
 
 ### xxl-job, email
-spring.mail.host=smtp.qq.com
-spring.mail.port=465
-spring.mail.username=1004711425@qq.com
-spring.mail.from=\u697C\u697C\u7684TG-Bot\u4EFB\u52A1\u8C03\u5EA6\u5E73\u53F0<1004711425@qq.com>
-spring.mail.password=mnrxsfmzsmkobefc
+spring.mail.host=smtp.163.com
+#spring.mail.port=25
+spring.mail.username=wkm1004711425@163.com
+spring.mail.from=wkm1004711425@163.com
+spring.mail.password=NWEMAQVKVIIGIQPF
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
