--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -40,12 +40,12 @@ spring.datasource.hikari.connection-timeout=10000
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.validation-timeout=1000
 
-### xxl-job, email
-spring.mail.host=smtp.163.com
-#spring.mail.port=25
-spring.mail.username=wkm1004711425@163.com
-spring.mail.from=wkm1004711425@163.com
-spring.mail.password=NWEMAQVKVIIGIQPF
+### \u62A5\u8B66\u90AE\u7BB1
+spring.mail.host=smtp.qq.com
+spring.mail.port=25
+spring.mail.username=1004711425@qq.com
+spring.mail.from=xxl-1004711425@qq.com
+spring.mail.password=qppnigusiglhbdbh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
